--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,9 @@ dependencies {
     //okhttp3
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
+    //firebase
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
+
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
