created student registration activity

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -53,10 +53,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     //okhttp3
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
     //firebase
     implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+
     //google authentication
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+    //ylantis uCrop
+    implementation 'com.github.yalantis:ucrop:2.2.6'
 
 }
 apply plugin: 'com.android.application'
