--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -71,6 +71,11 @@ dependencies {
     //number sliding picker
     implementation 'com.github.sephiroth74:NumberSlidingPicker:1.0.3'
 
+    //google calendar api
+    compile 'com.google.api-client:google-api-client:1.23.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    compile 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
+
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
