--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven {url  "https://dl.bintray.com/jobandtalent/artifacts"}
+
     }
 }
 
