created hosted quiz activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,18 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
-        <activity android:name=".general.activities.SubjectActivity"></activity>
+        <activity android:name=".faculty.activities.HostedQuizFacultyActivity"></activity>
+        <activity android:name=".general.activities.SubjectActivity" />
         <activity android:name=".students.activities.ProfileStudentActivity" />
         <activity android:name=".faculty.activities.ProfileFacultyActivity" />
         <activity android:name=".general.activities.StudentsActivity" />
         <activity android:name=".general.activities.FacultiesActivity" />
-        <activity android:name=".students.activities.QuizStudentActivity"  />
+        <activity android:name=".students.activities.QuizStudentActivity" />
         <activity android:name=".faculty.activities.HostQuizFacultyActivity" />
         <activity android:name=".students.activities.HomeStudentActivity" />
         <activity android:name=".faculty.activities.HomeFacultyActivity" />
