--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".students.activities.PreviousQuizzesStudentActivity"></activity>
+        <activity android:name=".admin.activities.HomeAdminActivity"></activity>
+        <activity android:name=".students.activities.PreviousQuizzesStudentActivity" />
         <activity android:name=".faculty.activities.HostedQuizFacultyActivity" />
         <activity android:name=".general.activities.SubjectActivity" />
         <activity android:name=".students.activities.ProfileStudentActivity" />
