created register student and faculty feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".admin.activities.HomeAdminActivity"></activity>
+        <activity android:name=".admin.activities.SubjectAdminActivity"></activity>
+        <activity android:name=".admin.activities.FacultyAdminActivity" />
+        <activity android:name=".admin.activities.StudentAdminActivity" />
+        <activity android:name=".admin.activities.HomeAdminActivity" />
         <activity android:name=".students.activities.PreviousQuizzesStudentActivity" />
         <activity android:name=".faculty.activities.HostedQuizFacultyActivity" />
         <activity android:name=".general.activities.SubjectActivity" />
